# GitHub-User-Activity-CLI-Tool

./: CMakeLists.txt  README.md  main.cpp
api/: ApiClient.cpp  ApiClient.h
cli/: CliHelper.cpp  CliHelper.h
event/: Event.cpp  Event.h
run/: Application.cpp  Application.h
